<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    android:padding="@dimen/activity_margin"
    tools:context="com.globe3.tno.g3_lite_mobile.activities.LoginActivity">

    <RelativeLayout
        android:id="@+id/layout_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/layout_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/char_space">

                <EditText
                    android:id="@+id/et_company"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_company"
                    android:paddingTop="0dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/char_space">

                <EditText
                    android:id="@+id/et_userid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_userid"
                    android:paddingTop="0dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/char_space">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingTop="0dp"
                    android:singleLine="true"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColorHint="@color/colorHint" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/background_button_login"
                android:onClick="doLogin"
                android:text="@string/label_login"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/ll_login_loader"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="24dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/pb_login_loader"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/progress_rotate_loader"
                    android:indeterminateDrawable="@drawable/progress_indeterminate" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/msg_loggin_in"
                    android:textSize="24sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_login_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:descendantFocusability="blocksDescendants"
                android:gravity="center"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/cb_login_remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_remember"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_login"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_launcher"
                android:src="@mipmap/ic_launcher" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_globe3_logo"
                android:src="@drawable/logo_globe3" />
        </LinearLayout>
    </RelativeLayout>

    <include layout="@layout/include_base_loader_logo" />
</FrameLayout>
