<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/layout_dashboard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:elevation="2dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/ll_connection_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_server_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_connecting"
                    android:textColor="@color/colorMenuLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_cast_black_48dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_server_connect_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/msg_server_connection"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:elevation="2dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/ll_sync_down_incremental"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_last_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_sync_black_48dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_last_sync_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/msg_last_sync"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:elevation="2dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/ll_request_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_gps_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/msg_connecting"
                    android:textColor="@color/colorMenuLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_map_black_48dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_gps_connect_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/msg_gps_services"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="0.5"
            android:elevation="2dp"
            app:cardCornerRadius="2dp">

            <LinearLayout
                android:id="@+id/ll_pending_sync"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_pending_sync"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlackLight"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_cloud_upload_black_48dp"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:id="@+id/tv_pending_sync_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:text="@string/msg_last_sync"
                    android:textSize="12sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/ll_time_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_time_in"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_access_time_black_48dp"
                android:tint="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time_in"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/ll_time_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_button_time_out"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="12dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_timelapse_black_48dp"
                android:tint="@color/colorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_time_out"
                android:textAllCaps="true"
                android:textColor="@color/colorWhite"
                android:textSize="32sp"
                android:textStyle="bold" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>


